Trying to fix animation issues on iOS

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    transition: color 1s, background-color 1s;
-}
-
 body {
     overflow-x: hidden;
     overflow-y: scroll;
@@ -9,6 +5,7 @@ body {
     font-family: "Open Sans", sans-serif;
     background-color: var(--color1);
     color: var(--color2);
+    transition: background-color 1s;
 }
 
 body.dark-theme {
@@ -24,11 +21,11 @@ body.light-theme {
 h1 {
     font-family: "Volkhov", serif;
     font-size: 2.7rem;
+    transition: color 1s;
 }
 
 #all {
     width: 100%;
-    will-change: background-color;
 }
 
 #content {
@@ -57,6 +54,7 @@ h1 {
     cursor: pointer;
     z-index: 10;
     color: --color1;
+    transition: color 1s;
 }
 
 /* .theme-selector {
@@ -78,7 +76,7 @@ h1 {
     right: 0;
     opacity: 1;
 
-    transition: opacity 0.5s;
+    transition: opacity 0.5, color 1s, background-color 1s;
 }
 
 .disappear {
@@ -104,11 +102,13 @@ h1 {
     margin-right: 45%;
     width: 10%;
     color: var(--color1);
+    transition: color 1s;
 }
 
 .encryption-title {
     text-align: center;
     color: var(--color1);
+    transition: color 1s;
 }
 
 #input {
@@ -156,6 +156,7 @@ h1 {
     border-radius: 0.5rem;
     cursor: pointer;
     font-weight: 600;
+    transition: color 1s, background-color 1s;
 }
 
 .submit:focus {
@@ -164,7 +165,7 @@ h1 {
 
 .heading {
     padding-bottom: 2rem;
-    will-change: background-color, color;
+    transition: color 1s;
 }
 
 .main-title {
@@ -229,6 +230,7 @@ h1 {
     filter: blur(0px);
     scrollbar-color: var(--color1) rgba(0, 0, 0, 0);
     scrollbar-width: thin;
+    transition: color 1s, background-color 1s;
 }
 
 /* Scrollbar */
